...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"
    tools:context=".ui.report.ReportFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/c1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:id="@+id/s1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp"
            android:background="#cd4b4b"
...
                        android:textStyle="bold"
                        android:text="1. Title:"
                        android:textColor="@color/report_process_text_color"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/report_title_cont_y1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Actual title"
                        android:textColor="#fafafa"
                        android:textSize="18sp" />
                </LinearLayout>
...
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/reportApprove_y1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Approve" />

                    <Button
                        android:id="@+id/reportNot_y1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Reject" />

                    <Space
                        android:layout_width="0dp"
...
                        android:text="1. Title:"
                        android:textStyle="bold"
                        android:textColor="@color/text_color"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/report_title_cont_y2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Actual title"
                        android:textColor="@color/text_color"
                        android:textSize="18sp" />
                </LinearLayout>
...
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:elevation="0dp"
            app:srcCompat="@drawable/ic_baseline_refresh_24" />
    </LinearLayout>
...
