<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ChatActivity">

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/round_back_light_10"
            android:paddingStart="12sp"
            android:paddingEnd="2dp"
            android:src="@drawable/back_btn" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilePic"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@+id/backBtn"
            android:src="@drawable/ic_baseline_android_24" />

        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toEndOf="@+id/profilePic">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Help! ChatBot"
                android:maxLines="1"
                android:textColor="#424242"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:text="Online"
                android:layout_marginTop="2dp"
                android:textColor="#00C853"/>
        </LinearLayout>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomBar"
        android:layout_below="@+id/topBar" />

    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <Button
            android:id="@+id/chatBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/UBCBlue"
            android:elevation="10dp"
            android:stateListAnimator="@null"
            android:text="Back"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/topButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/UBCBlue"
            android:elevation="10dp"
            android:stateListAnimator="@null"
            android:paddingVertical="10dp"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/midButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/UBCBlue"
            android:elevation="10dp"
            android:stateListAnimator="@null"
            android:paddingVertical="10dp"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/botButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/UBCBlue"
            android:elevation="10dp"
            android:stateListAnimator="@null"
            android:paddingVertical="10dp"
            android:textAllCaps="false" />

    </LinearLayout>

</RelativeLayout>